--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/jvelasquezm1/kata-birthday/issues"
   },
-  "homepage": "https://github.com/jvelasquezm1/kata-birthday#readme"
+  "homepage": "https://github.com/jvelasquezm1/kata-birthday#readme",
+  "dependencies": {
+    "csv-parser": "^2.3.2",
+    "dotenv": "^8.2.0"
+  }
 }
