--- a/package.json
+++ b/package.json
@@ -1,23 +1,50 @@
 {
-  "name": "kata",
-  "version": "1.0.0",
+  "name": "newcli",
+  "version": "0.0.0",
   "description": "Birthday kata (Wemanity - SupInfo)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo NO TESTS",
+    "postpack": "rimraf oclif.manifest.json",
+    "posttest": "eslint .",
+    "prepack": "oclif-dev manifest && oclif-dev readme",
+    "version": "oclif-dev readme && git add README.md"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jvelasquezm1/kata-birthday.git"
   },
-  "author": "Jim, Juan, Samuel",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jvelasquezm1/kata-birthday/issues"
+  "bin": {
+    "newcli": "./bin/run"
   },
-  "homepage": "https://github.com/jvelasquezm1/kata-birthday#readme",
   "dependencies": {
     "csv-parser": "^2.3.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "@oclif/command": "^1.5.19",
+    "@oclif/config": "^1.13.3",
+    "@oclif/plugin-help": "^2.2.3"
+  },
+  "devDependencies": {
+    "@oclif/dev-cli": "^1.22.2",
+    "eslint": "^5.16.0",
+    "eslint-config-oclif": "^3.1.0",
+    "globby": "^10.0.1",
+    "rimraf": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "files": [
+    "/bin",
+    "/npm-shrinkwrap.json",
+    "/oclif.manifest.json",
+    "/src"
+  ],
+  "oclif": {
+    "commands": "./src/commands",
+    "bin": "newcli",
+    "plugins": [
+      "@oclif/plugin-help"
+    ]
   }
 }
